fixed issue with title alignment

--- a/src/client/layout/Navbar.less
+++ b/src/client/layout/Navbar.less
@@ -209,9 +209,9 @@
 }
 
 
-@media (min-width: 700px) {
+@media (min-width: 700px) and (max-width: 950px) {
   #title{
-    margin-right: 45px;
+    margin-right: 40px;
   }
 
 }
